syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
package ds_tenant;

message DsTenantBean {

     int32  id=1 ;
     optional string tenant_code=2 ;
     optional string description=3 ;
     optional int32 queue_id=4 ;
     optional string create_time=5 ;
     optional string update_time=6 ;
}

// Generated according to https://cloud.google.com/apis/design/standard_methods
service DsTenantBeanService {
  rpc ListDsTenantBeans(ListDsTenantBeansRequest) returns (ListDsTenantBeansResponse) {
    option (google.api.http) = {
      get: "/v1alpha1/DsTenantBeans"
    };
  }

  rpc GetDsTenantBean(GetDsTenantBeanRequest) returns (DsTenantBean) {
    option (google.api.http) = {
      get: "/v1alpha1/{name=DsTenantBeans/*}"
    };
  }

  rpc CreateDsTenantBean(CreateDsTenantBeanRequest) returns (DsTenantBean) {
    option (google.api.http) = {
      post: "/v1alpha1/DsTenantBeans"
      body: "DsTenantBean"
    };
  }

  rpc UpdateDsTenantBean(UpdateDsTenantBeanRequest) returns (DsTenantBean) {
    option (google.api.http) = {
      patch: "/v1alpha1/{DsTenantBean.name=DsTenantBeans/*}"
      body: "DsTenantBean"
    };
  }

  rpc DeleteDsTenantBean(DeleteDsTenantBeanRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1alpha1/{name=DsTenantBeans/*}"
    };
  }
}

// message DsTenantBean {
// ! This should be defined elsewhere
// }

message ListDsTenantBeansRequest {
  // The parent resource name, for example, "shelves/shelf1"
  string parent = 1;

  // The maximum number of items to return.
  int32 page_size = 2;

  // The next_page_token value returned from a previous List request, if any.
  string page_token = 3;
}

message ListDsTenantBeansResponse {
  // The field name should match the noun "DsTenantBean" in the method name.
  // There will be a maximum number of items returned based on the page_size field in the request.
  repeated DsTenantBean DsTenantBeans = 1;

  // Token to retrieve the next page of results, or empty if there are no more results in the list.
  string next_page_token = 2;
}

message GetDsTenantBeanRequest {
  // The field will contain name of the resource requested.
  string name = 1;
}

message CreateDsTenantBeanRequest {
  // The parent resource name where the DsTenantBean is to be created.
  string parent = 1;

  // The DsTenantBean id to use for this DsTenantBean.
  string DsTenantBean_id = 2;

  // The DsTenantBean resource to create.
  // The field name should match the Noun in the method name.
  DsTenantBean DsTenantBean = 3;
}

message UpdateDsTenantBeanRequest {
  // The DsTenantBean resource which replaces the resource on the server.
  DsTenantBean DsTenantBean = 1;

  // The update mask applies to the resource. For the `google.protobuf.FieldMask` definition,
  // see https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#google.protobuf.FieldMask
  google.protobuf.FieldMask update_mask = 2;
}

message DeleteDsTenantBeanRequest {
  // The resource name of the DsTenantBean to be deleted.
  string name = 1;
}
